--- a/Capstone02/Views/Employees/Index.cshtml
+++ b/Capstone02/Views/Employees/Index.cshtml
@@ -7,57 +7,62 @@
 <header style="text-align: center; padding: 20px;">
     <h5>Iligan City East National High School - Santa Filomena</h5>
     <h6>Butuan - Cagayan de Oro - Iligan Rd, Iligan City, Lanao del Norte</h6>
-	<h6>Since 1985</h6>
+    <h6>Since 1985</h6>
 </header>
 
 <h2 style="text-align: center">O F F I C E R S</h2>
 
-<p>
-    <a asp-action="Create" class="btn btn-primary">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                First Name
-                @* @Html.DisplayNameFor(model => model.FirstName) *@
-            </th>
-            <th>
-                Last Name
-                @* @Html.DisplayNameFor(model => model.LastName) *@
-            </th>
-            <th>
-                Office
-                @* @Html.DisplayNameFor(model => model.Type) *@
-            </th>
-            <th>
-                Position
-                @* @Html.DisplayNameFor(model => model.Position) *@
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-    @foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Type)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Position)
-            </td>
-            <td>
-                <a asp-action="Edit" class="btn btn-primary" asp-route-id="@item.Id">Edit</a>
-                <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.Id">Details</a>
-                <a asp-action="Delete" class="btn btn-primary" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-    }
-    </tbody>
-</table>
+<div class="container mt-4">
+    
+    <p>
+        <a asp-action="Create" class="btn btn-primary">Create New</a>
+    </p>
+
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    First Name
+                    @* @Html.DisplayNameFor(model => model.FirstName) *@
+                </th>
+                <th>
+                    Last Name
+                    @* @Html.DisplayNameFor(model => model.LastName) *@
+                </th>
+                <th>
+                    Office
+                    @* @Html.DisplayNameFor(model => model.Type) *@
+                </th>
+                <th>
+                    Position
+                    @* @Html.DisplayNameFor(model => model.Position) *@
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.FirstName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.LastName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Type)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Position)
+                    </td>
+                    <td>
+                        <a asp-action="Edit" class="btn btn-primary mr-2" asp-route-id="@item.Id">Edit</a>
+                        <a asp-action="Details" class="btn btn-primary mr-2" asp-route-id="@item.Id">Details</a>
+                        <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id">Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
