--- a/Capstone02/Views/PTAFees/Details.cshtml
+++ b/Capstone02/Views/PTAFees/Details.cshtml
@@ -3,30 +3,41 @@
 @{
     ViewData["Title"] = "Details";
 }
+<hr />
+<h3 style="text-align: center">PTA Fee Details</h3>
+<hr />
 
-<h1>Details</h1>
+<div class="container mt-6">
+    <div class="row justify-content-center">
+        <div class="col-lg-6">
+            <div class="card">
+                <div class="card-body">
+                    <dl class="row">
+                        <dt class="col-sm-4">
+                            Type
+                            @* @Html.DisplayNameFor(model => model.Type) *@
+                        </dt>
+                        <dd class="col-sm-8">
+                            @Html.DisplayFor(model => model.Type)
+                        </dd>
 
-<div>
-    <h4>PTAFee</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            Type
-            @*@Html.DisplayNameFor(model => model.Type)*@
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Type)
-        </dd>
-        <dt class = "col-sm-2">
-            Amount
-            @*@Html.DisplayNameFor(model => model.Amount)*@
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Amount)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" class="btn btn-primary" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index" class="btn btn-primary">Back to List</a>
+                        <dt class="col-sm-4">
+                            Amount
+                            @* @Html.DisplayNameFor(model => model.Amount) *@
+                        </dt>
+                        <dd class="col-sm-8">
+                            @Html.DisplayFor(model => model.Amount)
+                        </dd>
+                    </dl>
+
+                    <div class="row mt-4">
+                        <div class="col-12 d-flex justify-content-end">
+							@*<a asp-action="Edit" class="btn btn-primary" asp-route-id="@Model?.Id">Edit</a>*@
+                            <a asp-action="Index" class="btn btn-secondary ml-2">Back to List</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
