--- a/Capstone02/Views/PTAFees/Index.cshtml
+++ b/Capstone02/Views/PTAFees/Index.cshtml
@@ -9,40 +9,43 @@
     <h6>Butuan - Cagayan de Oro - Iligan Rd, Iligan City, Lanao del Norte</h6>
     <h6>Since 1985</h6>
 </header>
-<h2 style="text-align: center">P A Y M E N T S</h2>
+<div class="container mt-4">
+    <h2 style="text-align: center">P A Y M E N T S</h2>
 
-<p>
-    <a asp-action="Create" class="btn btn-primary">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                Type
-                @*@Html.DisplayNameFor(model => model.Type)*@
-            </th>
-            <th>
-                Amount
-                @*@Html.DisplayNameFor(model => model.Amount)*@
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Type)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Amount)
-            </td>
-            <td>
-                    <a asp-action="Edit" class="btn btn-primary" asp-route-id="@item.Id">Edit</a>
-                    <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.Id">Details</a>
-                    <a asp-action="Delete" class="btn btn-primary" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+    <p>
+        <a asp-action="Create" class="btn btn-primary">Create New</a>
+    </p>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    Type
+                    @* @Html.DisplayNameFor(model => model.Type) *@
+                </th>
+                <th>
+                    Amount
+                    @* @Html.DisplayNameFor(model => model.Amount) *@
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Type)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Amount)
+                    </td>
+                    <td>
+                        <a asp-action="Edit" class="btn btn-primary mr-2" asp-route-id="@item.Id">Edit</a>
+                        <a asp-action="Details" class="btn btn-primary mr-2" asp-route-id="@item.Id">Details</a>
+                        <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id">Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
