--- a/Capstone02/Views/Parents/Details.cshtml
+++ b/Capstone02/Views/Parents/Details.cshtml
@@ -3,37 +3,47 @@
 @{
     ViewData["Title"] = "Details";
 }
+<hr />
+<h3 style="text-align: center">Parent's Details</h3>
+<hr />
 
-<h1>Details</h1>
-
-<div>
-    <h4>Parent</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            Parent's Name
-            @*@Html.DisplayNameFor(model => model.ParentName)*@
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ParentName)
-        </dd>
-        <dt class = "col-sm-2">
-            Contact Number
-            @*@Html.DisplayNameFor(model => model.ContactNumber)*@
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ContactNumber)
-        </dd>
-        <dt class = "col-sm-2">
-            Child
-            @*@Html.DisplayNameFor(model => model.Student)*@
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Student.FirstName)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" class="btn btn-primary"asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index" class="btn btn-primary">Back to List</a>
+<div class="container mt-6">
+    <div class="row justify-content-center">
+        <div class="col-lg-8">
+            <div class="card">
+                <div class="card-body">
+                    <dl class="row">
+                        <dt class="col-sm-3">
+                            Parent's Name
+                            @* @Html.DisplayNameFor(model => model.ParentName) *@
+                        </dt>
+                        <dd class="col-sm-9">
+                            @Html.DisplayFor(model => model.ParentName)
+                        </dd>
+                        <dt class="col-sm-3">
+                            Contact Number
+                            @* @Html.DisplayNameFor(model => model.ContactNumber) *@
+                        </dt>
+                        <dd class="col-sm-9">
+                            @Html.DisplayFor(model => model.ContactNumber)
+                        </dd>
+                        <dt class="col-sm-3">
+                            Child
+                            @* @Html.DisplayNameFor(model => model.Student) *@
+                        </dt>
+                        <dd class="col-sm-9">
+                            @Html.DisplayFor(model => model.Student.FirstName)
+                        </dd>
+                    </dl>
+					
+                    <div class="row mt-4">
+						<div class="col-12 d-flex justify-content-end">
+							<a asp-action="Index" class="btn btn-secondary mr-2">Back to List</a>
+							@*<a asp-action="Edit" class="btn btn-primary" asp-route-id="@Model?.Id">Edit</a>*@
+						</div>
+					</div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
