--- a/Capstone02/Views/Parents/Index.cshtml
+++ b/Capstone02/Views/Parents/Index.cshtml
@@ -10,42 +10,44 @@
     <h6>Since 1985</h6>
 </header>
 
-<h2 style="text-align: center">P A R E N T S</h2>
+<div class="container mt-4">
+    <h2 style="text-align: center">P A R E N T S</h2>
 
-<p>
-    <a asp-action="Create" class="btn btn-primary">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                Parent's Name
-                @*@Html.DisplayNameFor(model => model.ParentName)*@
-            </th>
-            <th>
-                Child
-                @*@Html.DisplayNameFor(model => model.Student)*@
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.ParentName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Student.FirstName)
-                @Html.DisplayFor(modelItem => item.Student.LastName)
-            </td>
+    <p>
+        <a asp-action="Create" class="btn btn-primary">Create New</a>
+    </p>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    Parent's Name
+                    @*@Html.DisplayNameFor(model => model.ParentName)*@
+                </th>
+                <th>
+                    Child
+                    @*@Html.DisplayNameFor(model => model.Student)*@
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ParentName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Student.FirstName) @Html.DisplayFor(modelItem => item.Student.LastName)
+                    </td>
 
-            <td>
-                    <a asp-action="Edit" class="btn btn-primary" asp-route-id="@item.Id">Edit</a>
-                    <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.Id">Details</a>
-                    <a asp-action="Delete" class="btn btn-primary" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+                    <td>
+                        <a asp-action="Edit" class="btn btn-primary mr-2" asp-route-id="@item.Id">Edit</a>
+                        <a asp-action="Details" class="btn btn-primary mr-2" asp-route-id="@item.Id">Details</a>
+                        <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id">Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
