--- a/Capstone02/Views/Students/Index.cshtml
+++ b/Capstone02/Views/Students/Index.cshtml
@@ -12,54 +12,58 @@
 
 <h2 style="text-align: center">S T U D E N T S</h2>
 
-<p>
-    <a asp-action="Create" class="btn btn-primary">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                First Name
-                @*@Html.DisplayNameFor(model => model.FirstName)*@
-            </th>
-            <th>
-                Last Name
-                @*@Html.DisplayNameFor(model => model.LastName)*@
-            </th>
-			<th>
-				Year Level
-				@*@Html.DisplayNameFor(model => model.Year)*@
-			</th>
-			<th>
-                Section
-                @*@Html.DisplayNameFor(model => model.Section)*@
-            </th>
+<div class="container mt-4">
+
+    <p>
+        <a asp-action="Create" class="btn btn-primary">Create New</a>
+    </p>
+
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    First Name
+                    @*@Html.DisplayNameFor(model => model.FirstName)*@
+                </th>
+                <th>
+                    Last Name
+                    @*@Html.DisplayNameFor(model => model.LastName)*@
+                </th>
+			    <th>
+				    Year Level
+				    @*@Html.DisplayNameFor(model => model.Year)*@
+			    </th>
+			    <th>
+                    Section
+                    @*@Html.DisplayNameFor(model => model.Section)*@
+                </th>
             
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Year)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Section)
-            </td>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+    @foreach (var item in Model) {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FirstName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Year)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Section)
+                </td>
             
-            <td>
-                    <a asp-action="Edit" class="btn btn-primary" asp-route-id="@item.Id">Edit</a>
-                    <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.Id">Details</a>
-                    <a asp-action="Delete" class="btn btn-primary" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+                <td>
+                        <a asp-action="Edit" class="btn btn-primary" asp-route-id="@item.Id">Edit</a>
+                        <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.Id">Details</a>
+                        <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+    }
+        </tbody>
+    </table>
+</div>
