--- a/Capstone02/Views/Shared/_SideBar.cshtml
+++ b/Capstone02/Views/Shared/_SideBar.cshtml
@@ -39,7 +39,8 @@
                 <partial name="_LoginPartial.cshtml" />
             </li>
         </ul>
-
+        
+                <partial name="_LoginPartial" />
         
     </nav>
     <button class="sidebar-minimizer brand-minimizer" type="button"></button>
