--- a/Capstone02/Views/Schools/Index.cshtml
+++ b/Capstone02/Views/Schools/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_layout.cshtml";
 }
 
 <header style="text-align: center; padding: 20px;">
@@ -15,7 +16,7 @@
 </p>*@
 
 <div class="container mt-4">
-    <table class="table">
+    <table id="tbllist" class="table table-responsive-sm table-hover table-outline mb-0">
         <thead>
             <tr>
                 <th>
