--- a/Capstone02/Views/Shared/_Layout.cshtml
+++ b/Capstone02/Views/Shared/_Layout.cshtml
@@ -1,123 +1,208 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
+@inject RoleManager<IdentityRole> _roleManager
+
+
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>@ViewData["Title"] - AdminWebCore</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - PTA</title>
+
+
+    <!---LOADER--->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/3.1.14/signalr.min.js"></script>
+    <link href="~/css/loading-bar (3).css" rel="stylesheet" />
+    <script data-pace-options='{ "ajax": false }' src="~/lib/pace-progress/js/pace.min.js"></script>
+    <script src='https://api.mapbox.com/mapbox-gl-js/v3.0.1/mapbox-gl.js'></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v3.0.1/mapbox-gl.css' rel='stylesheet' />
+    <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+    <!-- Icons-->
+    <link href="~/lib/font-awesome/css/font-awesome.css" rel="stylesheet" />
+
+    <!---ICONS--->
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css?v=@DateTime.UtcNow.Ticks.ToString()" />
+   
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    
+
+    <link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.4.2/css/buttons.dataTables.min.css" />
+    <!------TABLE-------->
+    <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.4.2/js/dataTables.buttons.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.4.2/js/buttons.print.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.7/js/dataTables.semanticui.min.js"></script>
+    <link href="https://cdn.datatables.net/v/dt/jszip-3.10.1/dt-1.13.8/b-2.4.2/b-html5-2.4.2/b-print-2.4.2/datatables.min.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
+    <script src="https://cdn.datatables.net/v/dt/jszip-3.10.1/dt-1.13.8/b-2.4.2/b-html5-2.4.2/b-print-2.4.2/datatables.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#tbllist').DataTable({
+                dom: 'Bfrtip',
+                buttons:[
+                    'print', 'pdf', 'excel'
+                ],
+                "pageLength": 5,
+            });
+        });
+    </script>
+    <!-- Add this script in your shared layout or a separate script file -->
+
+
+    <link rel="stylesheet" href="https://code.jquery.com/jquery-3.7.0.js">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/dataTables.semanticui.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.9.2/semantic.min.css">
+    <!--EMERGENCY ALERT-->
+   <script>
+    // Function to handle "View Details" button click
+    function viewDetails() {
+        // Implement your logic to view details here
+        alert('View Details button clicked!');
+    }
+</script>
+
+
+
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-
-    <environment include="Development">
-        <!-- VENDOR CSS -->
-        <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
-        <!-- Icons-->
-        <link href="~/lib/font-awesome/css/font-awesome.css" rel="stylesheet" />
-        <link href="~/lib/coreui/icons/css/coreui-icons.css" rel="stylesheet" />
-        <link href="~/lib/flag-icon-css/css/flag-icon.css" rel="stylesheet" />
-        <link href="~/lib/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" />
-        <link href="~/lib/pace-progress/css/pace.css" rel="stylesheet" />
-        <!-- MAIN CSS -->
-        <link href="~/lib/coreui/css/style.css" rel="stylesheet" />
-
-        <link rel="stylesheet" href="~/css/site.css" />
-    </environment>
-    <environment exclude="Development">
-        <!-- VENDOR CSS -->
-        <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-        <link href="~/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
-        <link href="~/lib/coreui/icons/css/coreui-icons.min.css" rel="stylesheet" />
-        <link href="~/lib/flag-icon-css/css/flag-icon.css" rel="stylesheet" />
-        <link href="~/lib/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" />
-        <link href="~/lib/pace-progress/css/pace.css" rel="stylesheet" />
-        <!-- MAIN CSS -->
-        <link href="~/lib/coreui/css/style.min.css" rel="stylesheet" />
-
-        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
-    </environment>
-
-    @RenderSection("Headers", required: false)
-
-    <!-- ICONS -->
-    <link rel="icon" type="image/x-icon" sizes="96x96" href="/favicon.ico">
 </head>
 
-<!-- BODY -->
-<body class="app header-fixed sidebar-fixed aside-menu-fixed sidebar-lg-show">
 
-    @*<partial name="_CookieConsentPartial" />*@
-
-    <!-- NAVBAR -->
-
-    <partial name="_NavBar" />
-    <!-- END NAVBAR -->
-
-    <div class="app-body">
-        @if (SignInManager.IsSignedIn(User))
-        {
-            <!-- LEFT SIDEBAR -->
-            <partial name="_SideBar" />
-            <!-- END LEFT SIDEBAR -->
-            <!-- MAIN CONTENT -->
-        }
-        <main class="main">
-
-            <!-- Breadcrumb-->
-
-            @RenderBody()
-        </main>
-        <!-- END MAIN CONTENT -->
-        <!-- ASIDE MENU -->
-        <!-- END ASIDE MENU -->
-
-
+<body class="app flex-row align-items-center">
+   
+    @if (SignInManager.IsSignedIn(User))
+    {
+        <div class="row">
+            <div class="sidebar open">
+          <div class="row logo_details">
+    <div class="logo_info">
+        <img src="/images/msu-logo.png" alt="E-MSUnity Logo" class="img-fluid logo_image">
+        <div class="logo_name">PTAFee</div>
     </div>
+    <i class="bx bx-menu" id="btn"></i>
+</div>
 
-    <style>
-        body.sidebar-minimized .nav-link i {
-            display: inline; /* Show icons when sidebar is minimized */
+
+                <ul class="nav-list">
+                
+                        <li>
+                            <a asp-area="" asp-controller="Home" asp-action="Index">
+                                <i class="bx bxs-dashboard"></i>
+                                <span class="link_name">Dashboard</span>
+                            </a>
+                            <span class="tooltip">Dashboard</span>
+                        </li>
+                        <li>
+                            <a asp-area="" asp-controller="Employees" asp-action="Index">
+                                <i class="bx bx-walk"></i>
+                                <span class="link_name">Employees</span>
+                            </a>
+                            <span class="tooltip">Employees</span>
+                        </li>
+                        <li>
+                            <a asp-area="" asp-controller="PTAFees" asp-action="Index">
+                                <i class="bx bx-bus-school"></i>
+                                <span class="link_name">PTAFees</span>
+                            </a>
+                            <span class="tooltip">PTAFees</span>
+                        </li>
+                        <li>
+                            <a asp-area="" asp-controller="Students" asp-action="Index">
+                                <i class="bx bx-history"></i>
+                                <span class="link_name">Students</span>
+                            </a>
+                            <span class="tooltip">Students</span>
+                        </li>
+                        <li>
+                            <a asp-area="" asp-controller="Transactions" asp-action="Index">
+                                <i class="bx bxs-inbox"></i>
+                                <span class="link_name">Transactions</span>
+                            </a>
+                            <span class="tooltip">Transactions</span>
+                        </li>
+
+                </ul>
+
+                <partial name="_LoginPartial" />
+            </div>
+            <section class="home-section">
+              
+                <main class="main">
+             
+                    <div class="container">
+                        @RenderBody()
+                    </div>
+                </main>
+            </section>
+        </div>
+
+
+
+    }
+    else
+    {
+
+    }
+
+
+    <script>
+        window.onload = function () {
+            const sidebar = document.querySelector(".sidebar");
+            const closeBtn = document.querySelector("#btn");
+            const searchBtn = document.querySelector(".bx-search")
+
+            closeBtn.addEventListener("click", function () {
+                sidebar.classList.toggle("open")
+                menuBtnChange()
+            })
+
+            searchBtn.addEventListener("click", function () {
+                sidebar.classList.toggle("open")
+                menuBtnChange()
+            })
+
+            function menuBtnChange() {
+                if (sidebar.classList.contains("open")) {
+                    closeBtn.classList.replace("bx-menu", "bx-menu-alt-right")
+                } else {
+                    closeBtn.classList.replace("bx-menu-alt-right", "bx-menu")
+                }
+            }
         }
-
-        body.sidebar-minimized .nav-link .menu-text {
-            display: none; /* Hide menu text when sidebar is minimized */
-        }
-    </style>
-
-    <environment include="Development">
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
-        <!-- CoreUI and necessary plugins-->
-        <script src="~/lib/pace-progress/js/pace.min.js"></script>
-
-        @*<script src="~/lib/perfect-scrollbar/dist/perfect-scrollbar.js"></script>*@
-        <script src="~/lib/coreui/dist/js/coreui.js"></script>
-        <!-- Plugins and scripts required by this view-->
-        @*<script src="~/lib/chart.js/dist/Chart.js"></script>
-        <script src="~/lib/coreui/js/custom-tooltips.js"></script>
-        <script src="~/lib/coreui/js/main.js"></script>*@
-
-        <script src="~/js/site.js" asp-append-version="true"></script>
-    </environment>
-    <environment exclude="Development">
-        <script src="~/lib/jquery/dist/jquery.min.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- CoreUI and necessary plugins-->
-        <script src="~/lib/pace-progress/pace.min.js"></script>
-
-        <script src="~/lib/perfect-scrollbar/dist/perfect-scrollbar.min.js"></script>
-        <script src="~/lib/coreui/dist/js/coreui.min.js"></script>
-        <!-- Plugins and scripts required by this view-->
-        @*<script src="~/lib/chart.js/dist/Chart.min.js"></script>
-        <script src="~/lib/coreui/js/custom-tooltips.js"></script>
-        <script src="~/lib/coreui/js/main.js"></script>*@
-
-        <script src="~/js/site.min.js" asp-append-version="true"></script>
-    </environment>
-
+    </script>
+   
+    <div class="container">
+    
+        @RenderBody()
+    </div>
+    
     @RenderSection("Scripts", required: false)
-
+  <div class="modal fade" id="emergencyModal" tabindex="-1" role="dialog" aria-labelledby="emergencyModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="emergencyModalLabel">Emergency Alert</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body"></div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" onclick="viewDetails()">View Details</button>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
+
 </html>
