--- a/Capstone02/Views/Transactions/Index.cshtml
+++ b/Capstone02/Views/Transactions/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_layout.cshtml";
 }
 
 <h1>Transactions</h1>
@@ -9,7 +10,7 @@
 <p>
     <a asp-action="Create" class="btn btn-primary">Create New</a>
 </p>
-<table class="table">
+<table id="tbllist" class="table table-responsive-sm table-hover table-outline mb-0">
     <thead>
         <tr>
             <th>
