--- a/Capstone02/wwwroot/css/site.css
+++ b/Capstone02/wwwroot/css/site.css
@@ -1,16 +1,421 @@
-.card {
-    border-radius: 15px;
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+:root {
+    --color-default: #07165b;
+    --color-second: #6f1926; /*search and logout*/
+    --color-white: white; /*Icon and texts*/
+    --color-body: white;
+    --color-light: #ffff;
+}
+/*#004f83*/
+/*#e4e9f7;*/
+
+
+.bx.action-icon {
+    color: #3498db; /* Set your desired icon color */
 }
 
-h2 {
-    font-family: 'Arial Rounded MT'
+* {
+    padding: 0%;
+    margin: 0%;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
-h5, h6 {
-    font-family: 'Arial Rounded MT'
+body {
+    /*min-height: 100vh;*/
+    position: relative;
 }
 
-.card {
-    margin-left: 10px;
-    margin-right: 10px;
+.sidebar {
+    min-height: 100vh;
+    width: 78px;
+    padding: 6px 14px;
+    z-index: 99;
+    background-color: var(--color-default);
+    transition: all .5s ease;
+    position: fixed;
+    top: 0;
+    left: 0;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
+
+    .sidebar.open {
+        width: 250px;
+    }
+
+    .sidebar .logo_details {
+        height: 60px;
+        display: flex;
+        align-items: center;
+        position: relative;
+    }
+
+        .sidebar .logo_details .icon {
+            opacity: 0;
+            transition: all 0.5s ease;
+        }
+
+
+        .sidebar .logo_details .logo_image {
+            width: 50px;
+            height: auto;
+            margin-left: 10px;
+            margin-right: 20px;
+            transition: all 0.5s ease;
+            opacity: 0;
+        }
+
+        .sidebar .logo_details .logo_name {
+            color: white;
+            font-size: 20px;
+            font-weight: 600;
+            opacity: 0;
+            transition: all .5s ease;
+            letter-spacing: 7px;
+        }
+
+    .sidebar.open .logo_details .icon,
+    .sidebar.open .logo_details .logo_image,
+    .sidebar.open .logo_details .logo_name {
+        opacity: 1;
+    }
+
+    .sidebar .logo_details #btn {
+        position: absolute;
+        top: 50%;
+        right: 0;
+        transform: translateY(-50%);
+        font-size: 23px;
+        text-align: center;
+        cursor: pointer;
+        transition: all .5s ease;
+    }
+
+    .sidebar.open .logo_details #btn {
+        text-align: right;
+    }
+
+    .sidebar i {
+        color: white;
+        height: 60px;
+        line-height: 60px;
+        min-width: 50px;
+        font-size: 25px;
+        text-align: center;
+    }
+
+    .sidebar .nav-list {
+        margin-top: 20px;
+        height: 100%;
+        margin-left: -22px;
+    }
+
+    .sidebar li {
+        position: relative;
+        margin: 8px 0;
+        list-style: none;
+    }
+
+        .sidebar li .tooltip {
+            position: absolute;
+            top: -20px;
+            left: calc(100% + 15px);
+            z-index: 3;
+            background-color: var(--color-white);
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+            padding: 6px 14px;
+            font-size: 15px;
+            font-weight: 400;
+            border-radius: 5px;
+            white-space: nowrap;
+            opacity: 0;
+            pointer-events: none;
+        }
+
+        .sidebar li:hover .tooltip {
+            opacity: 1;
+            pointer-events: auto;
+            transition: all 0.4s ease;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+
+    .sidebar.open li .tooltip {
+        display: none;
+    }
+
+    .sidebar input {
+        font-size: 15px;
+        color: var(--color-white);
+        font-weight: 400;
+        outline: none;
+        height: 35px;
+        width: 35px;
+        border: none;
+        border-radius: 5px;
+        background-color: var(--color-second);
+        transition: all .5s ease;
+    }
+
+        .sidebar input::placeholder {
+            color: var(--color-light)
+        }
+
+    .sidebar.open input {
+        width: 100%;
+        padding: 0 20px 0 50px;
+    }
+
+    .sidebar .bx-search {
+        position: absolute;
+        top: 50%;
+        left: 0;
+        transform: translateY(-50%);
+        font-size: 22px;
+        background-color: var(--color-second);
+        color: var(--color-white);
+    }
+
+    .sidebar li a {
+        display: flex;
+        height: 100%;
+        width: 100%;
+        align-items: center;
+        text-decoration: none;
+        background-color: var(--color-default);
+        position: relative;
+        transition: all .5s ease;
+        z-index: 12;
+    }
+
+        .sidebar li a::after {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            transform: scaleX(0);
+            background-color: var(--color-second);
+            border-radius: 5px;
+            transition: transform 0.3s ease-in-out;
+            transform-origin: left;
+            z-index: -2;
+        }
+
+        .sidebar li a:hover::after {
+            transform: scaleX(1);
+            color: var(--color-default)
+        }
+
+        .sidebar li a .link_name {
+            color: white;
+            font-size: 15px;
+            font-weight: 400;
+            white-space: nowrap;
+            pointer-events: auto;
+            transition: all 0.4s ease;
+            pointer-events: none;
+            opacity: 0;
+            letter-spacing: 1px;
+        }
+
+        .sidebar li a:hover .link_name,
+        .sidebar li a:hover i {
+            transition: all 0.5s ease;
+            color: white
+        }
+
+    .sidebar.open li a .link_name {
+        opacity: 1;
+        pointer-events: auto;
+    }
+
+    .sidebar li i {
+        height: 35px;
+        line-height: 35px;
+        font-size: 18px;
+        border-radius: 5px;
+    }
+
+    .sidebar li.profile {
+        position: fixed;
+        height: 60px;
+        width: 78px;
+        left: 0;
+        bottom: -8px;
+        padding: 10px 14px;
+        overflow: hidden;
+        transition: all .5s ease;
+    }
+
+    .sidebar.open li.profile {
+        width: 250px;
+    }
+
+    .sidebar .profile .profile_details {
+        display: flex;
+        align-items: center;
+        flex-wrap: nowrap;
+        color: white;
+    }
+
+    .sidebar li img {
+        height: 45px;
+        width: 45px;
+        object-fit: cover;
+        border-radius: 50%;
+        margin-right: 10px;
+    }
+
+    .sidebar li.profile .name,
+    .sidebar li.profile .designation {
+        font-size: 15px;
+        font-weight: 400;
+        color: var(--color-white);
+        white-space: nowrap;
+    }
+
+    .sidebar li.profile .designation {
+        font-size: 12px;
+    }
+
+    .sidebar .profile #log_out {
+        position: absolute;
+        top: 50%;
+        right: 0;
+        transform: translateY(-50%);
+        background-color: var(--color-second);
+        width: 100%;
+        height: 60px;
+        line-height: 60px;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: all 0.5s ease;
+    }
+
+    .sidebar.open .profile #log_out {
+        width: 50px;
+        background: none;
+    }
+
+
+
+.home-section {
+    position: absolute;
+    background-color: var(--color-body);
+    min-height: 100vh;
+    top: 0;
+    left: 75px;
+    width: calc(100% - 78px);
+    transition: all .5s ease;
+    z-index: 2;
+}
+
+    .home-section .text {
+        display: inline-block;
+        color: var(--color-default);
+        font-size: 25px;
+        font-weight: 500;
+        margin: 18px;
+    }
+
+.sidebar.open ~ .home-section {
+    left: 260px;
+    width: calc(100% - 260px);
+}
+
+
+.container h3 {
+    color: white;
+}
+
+#tbllist {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    border-color: transparent;
+    background-color: rgba(255, 255, 255, 0.8);
+}
+
+
+    #tbllist thead th {
+        font-size: 12px;
+        /*font-family:Calibri;*/
+        letter-spacing: 1px;
+        color: black
+    }
+
+    #tbllist thead td {
+        font-size: 2px;
+        /*font-family:Calibri;*/
+        letter-spacing: 1px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
+.action-icon {
+    height: 1%;
+}
+
+.container {
+    position: relative;
+    background-color: transparent;
+}
+
+.small-col {
+    width: 10px;
+    Adjust the width to your desired value
+}
+
+.medium-col {
+    width: 100px;
+}
+
+.large-col {
+    width: 270px;
+}
+
+td.medium-col {
+    width: 50px;
+}
+
+.address-container {
+    max-width: 200px; /* Adjust the max-width according to your preference */
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.logo_info {
+    display: flex;
+    align-items: center;
+}
+
+.logo_image {
+    width: 1px;
+    height: auto;
+    margin-right: 10px; /* Adjust the margin as needed */
+}
+
+.logo_name {
+    color: white;
+    font-size: 20px;
+    font-weight: 600;
+    letter-spacing: 7px;
+}
+
+#btn {
+    font-size: 23px;
+    text-align: center;
+    cursor: pointer;
+    transition: all .5s ease;
+}
+
+.logo_details.open .logo_info {
+    flex: 1; /* Allow the logo_info to take up remaining space */
+}
+
+.logo_details.open #btn {
+    text-align: right;
+}
+
+
