Roles(Model, Views, Controller)

--- a/Capstone02/Views/Shared/_Layout.cshtml
+++ b/Capstone02/Views/Shared/_Layout.cshtml
@@ -131,6 +131,13 @@
                             </a>
                             <span class="tooltip">Transactions</span>
                         </li>
+                    <li>
+                        <a asp-area="" asp-controller="Roles" asp-action="Index">
+                            <i class="bx bxs-inbox"></i>
+                            <span class="link_name">Roles</span>
+                        </a>
+                        <span class="tooltip">Roles</span>
+                    </li>
 
                 </ul>
 
