--- a/Capstone02/Views/Roles/Create.cshtml
+++ b/Capstone02/Views/Roles/Create.cshtml
@@ -1,10 +1,12 @@
-﻿@model Capstone02.Models.PTAFee
+﻿@model Capstone02.Models.Role
 
 @{
     ViewData["Title"] = "Create";
 }
-<hr class="text-black" />
-<h3 style="text-align: center">Enter Payment</h3>
+
+<h1 style="text-align: center"></h1>
+
+<h4 style="text-align: center">Create Role</h4>
 <hr />
 
 <div class="container mt-6">
@@ -14,18 +16,11 @@
                 <div class="card-body">
                     <form asp-action="Create">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                        <input type="hidden" asp-for="Id" />
 
                         <div class="form-group">
-                            <h6 class="form-label">Type</h6>
-                            <input asp-for="Type" class="form-control" />
-                            <span asp-validation-for="Type" class="text-danger"></span>
-                        </div>
-
-                        <div class="form-group">
-                            <h6 class="form-label">Amount</h6>
-                            <input asp-for="Amount" class="form-control" />
-                            <span asp-validation-for="Amount" class="text-danger"></span>
+                            <h6 class="form-label">Name</h6>
+                            <input asp-for="Name" class="form-control" />
+                            <span asp-validation-for="Name" class="text-danger"></span>
                         </div>
 
                         <div class="row mt-4">
@@ -41,8 +36,8 @@
     </div>
 </div>
 
+
+ 
 @section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
