--- a/Capstone02/Views/Shared/_Layout.cshtml
+++ b/Capstone02/Views/Shared/_Layout.cshtml
@@ -125,6 +125,13 @@
                             <span class="tooltip">Students</span>
                         </li>
                         <li>
+                        <a asp-area="" asp-controller="Parents" asp-action="Index">
+                            <i class="bx bx-history"></i>
+                            <span class="link_name">Parents</span>
+                        </a>
+                        <span class="tooltip">Parents</span>
+                        </li>
+                        <li>
                             <a asp-area="" asp-controller="Transactions" asp-action="Index">
                                 <i class="bx bxs-inbox"></i>
                                 <span class="link_name">Transactions</span>
